<resources>
    <string name="app_name">Weight Mates</string>
    <string name="action_calorie">Calorie</string>
    <string name="action_report">Report</string>
    <string name="calorieTitle">Welcome to Weight Mates</string>
    <string name="calorieSubtitle">Please Calculate Calories</string>
    <string name="countButton">Count</string>
    <string name="kCal">KCal</string>
    <string name="cal">Cal</string>
    <string name="amount">Amount</string>
    <string name="total">Current Total</string>
    <string name="totalFinal">Final Total</string>
    <string name="reportTitle">Calorie Report</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="enter_amount">Enter Amount</string>

    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Calorie Counter</string>
    <string name="nav_header_subtitle">Count Your Calories</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_calorie">Calories</string>
    <string name="menu_report">Report</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_about">About Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
